--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "lazyedge",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "./dist/index.js",
   "bin": "./dist/index.js",
   "scripts": {
-    "build": "npx tsc && npx cpy-cli ./assets/ ./dist/",
-    "test": "@odzi/lazyedge validate"
+    "build": "npx tsc && npx cpy-cli ./assets/ ./dist/"
   },
   "files": [
     "./dist"
