--- a/package.json
+++ b/package.json
@@ -1,40 +1,25 @@
 {
   "name": "lazyedge",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
-  "bin": "./dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "npx tsc && npx cpy-cli ./assets/ ./dist/"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "files": [
-    "./dist"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/julipup/lazyedge.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/julipup/lazyedge/issues"
   },
   "homepage": "https://github.com/julipup/lazyedge#readme",
-  "dependencies": {
-    "@npmcli/package-json": "^3.0.0",
-    "commander": "^9.5.0",
-    "esbuild": "^0.16.16",
-    "figlet": "^1.5.2",
-    "jsonschema": "^1.4.1",
-    "new-find-package-json": "^2.0.0",
-    "yaml": "^2.2.1"
-  },
-  "devDependencies": {
-    "@types/figlet": "^1.5.5",
-    "@types/node": "^18.11.18",
-    "@types/npmcli__package-json": "^2.0.0",
-    "faas-js-runtime": "^0.9.7",
-    "typescript": "^4.9.4"
-  }
+  "workspaces": [
+    "apps/cli",
+    "adapters",
+    "runtimes",
+    "types"
+  ]
 }
