--- a/runtimes/src/container/assets/dockerfiles/Dockerfile.typescript
+++ b/runtimes/src/container/assets/dockerfiles/Dockerfile.typescript
@@ -13,6 +13,6 @@ FROM node:18-alpine as runtime
 WORKDIR /function
 
 COPY --from=builder /src/node_modules ./node_modules
-COPY package.json index.js /function/
+COPY . .
 
 ENTRYPOINT [ "npm", "run", "start" ]
