--- a/runtimes/package.json
+++ b/runtimes/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dockerode": "^3.3.14",
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "dockerode": "^3.3.4",
     "esbuild": "^0.17.2"
   }
 }
