Remove eslint, add prettier, prettify all files

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "ts-node tests/bin/test",
     "test:watch": "nodemon tests/bin/test.ts",
-    "lint": "npx eslint **/*.ts",
-    "lint:fix": "npx eslint **/*.ts --fix"
+    "prettier:check": "npx prettier --check --",
+    "prettier:fix": "npx prettier --write --"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "@types/signale": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
-    "eslint": "^8.33.0",
+    "prettier": "2.8.7",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
