Major rewrite Removed runtimes package and logic - routes are now handled exclusively by adapters. Removed annotations helpers and logic, updated lazyedge schema, added a lot more fancy errors. Added npm run dev command to simultaneously run tsc (or nodemon) in every package. Updated all package's configurations - added main and files fields. Implemented deploy and init cli command. Started working on environments concept. (Every adapter and route needs to have at least one environment configured, so that it'll know where and how it should deploy this route) A lot of other minor changes.

--- a/adapters/package.json
+++ b/adapters/package.json
@@ -2,8 +2,11 @@
   "name": "@lazyedge/adapters",
   "version": "1.0.0",
   "description": "",
+  "main": "./dist/index.js",
+  "files": ["./dist/**/*", "./package.json"],
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
