--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -7,7 +7,8 @@
     "lazyedge": "dist/index.js"
   },
   "scripts": {
-    "build": "tsc && npx cpy-cli ./assets/ ./dist/"
+    "build": "tsc && npx cpy-cli ./assets/ ./dist/",
+    "dev": "nodemon"
   },
   "files": [
     "./dist"
@@ -24,19 +25,18 @@
   },
   "homepage": "https://github.com/julipup/lazyedge#readme",
   "dependencies": {
-    "@npmcli/package-json": "^3.0.0",
+    "@lazyedge/helpers": "^1.0.0",
+    "chalk": "^4.1.2",
     "commander": "^9.5.0",
-    "esbuild": "^0.16.16",
-    "figlet": "^1.5.2",
+    "enquirer": "^2.3.6",
+    "inquirer": "^9.1.5",
     "jsonschema": "^1.4.1",
-    "new-find-package-json": "^2.0.0",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/figlet": "^1.5.5",
+    "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.18",
-    "@types/npmcli__package-json": "^2.0.0",
-    "faas-js-runtime": "^0.9.7",
     "typescript": "^4.9.4"
   }
 }
