--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "declaration": true
-  }
+    "declaration": true,
+  },
+  "include": ["src/**/*"],
 }
