--- a/helpers/package.json
+++ b/helpers/package.json
@@ -2,11 +2,14 @@
   "name": "@lazyedge/helpers",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "private": true,
+  "scripts": {
+    "dev": "tsc --build --verbose --watch"
+  },
   "dependencies": {
     "jsonschema": "^1.4.1"
   },
