--- a/helpers/tsconfig.json
+++ b/helpers/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "../tsconfig.base.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist"
+  }
 }
