--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../tsconfig.base.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist",
+    "types": ["../index"],
+  }
 }
