Prepare packages for publishing, remove unused files, add examples folder without any examples (yet), update default config files, add new plan to README.md

--- a/adapters/package.json
+++ b/adapters/package.json
@@ -5,10 +5,13 @@
   "main": "./dist/index.js",
   "files": ["./dist/**/*", "./package.json"],
   "types": "./dist/index.d.ts",
+  "private": false,
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "tsc && npx cpy-cli ./assets/ ./dist/",
+    "publish": "npm publish --access public"
   },
   "keywords": [],
-  "author": "",
+  "author": "@julipup",
   "license": "ISC"
 }
