--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -7,8 +7,9 @@
     "lazyedge": "dist/index.js"
   },
   "scripts": {
+    "dev": "nodemon",
     "build": "tsc && npx cpy-cli ./assets/ ./dist/",
-    "dev": "nodemon"
+    "publish": "npm publish --access public"
   },
   "files": [
     "./dist"
@@ -18,7 +19,7 @@
     "url": "git+https://github.com/julipup/lazyedge.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "@julipup",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/julipup/lazyedge/issues"
