--- a/types/package.json
+++ b/types/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
-  "files": ["./dist/**/*", "./package.json"],
+  "files": [
+    "./dist/**/*",
+    "./package.json"
+  ],
   "types": "./dist/index.d.ts",
   "keywords": [],
   "author": "@julipup",
